gce-rke-cluster/setup/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ext
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  selector:
    app: ingress-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  - protocol: TCP
    port: 443
    targetPort: 443
